fixed up the layout below the main chart, added a footer and some dummy images

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -34,6 +34,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- Configure your routes here -->
 <link rel="import" href="routing.html">
 
+<!-- Add third party elements here -->
+<link rel="import" href="../bower_components/lavu-grid/lavu-grid.html">
+<link rel="import" href="../bower_components/universal-footer/universal-footer.html">
+
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="my-greeting/my-greeting.html">
