--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -127,6 +127,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     height: 900px;
   }
 
+universal-footer {
+  --universal-footer-background-color: #404040;
+  --universal-footer-text-color: var(--text-primary-color);
+  --universal-footer-col-title-color:  var(--secondary-text-color);
+}
+universal-footer a {
+  color: var(--text-primary-color);
+}
   /* Breakpoints */
 
   /* Small */
