moved existing code for this functionality into a new element and styled it up.

--- a/app/index.html
+++ b/app/index.html
@@ -99,11 +99,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <iron-pages attr-for-selected="data-route" selected="{{route}}">
 
             <section data-route="home" class="flex">
-            <paper-material elevation="1" class="layout horizontal justify space-between">
-              <paper-input id="dataNode" label="dataNode">test</paper-input>
-              <paper-input id="dataFile" label="dataFile"></paper-input>
-              <paper-button raised on-tap="importData">import file</paper-button>
-            </paper-material>
+              <firebase-data-importer firebase-ref="https://rbdcdataviz.firebaseio.com/ipedsData/"></firebase-data-importer>
               <paper-material elevation="1">
                 <!-- placeholder for a chart-tile component featuring the motion chart -->
                 <google-chart id="motionChartPlaceholder" type="bubble" options="{}"
