--- a/app/index.html
+++ b/app/index.html
@@ -99,7 +99,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <iron-pages attr-for-selected="data-route" selected="{{route}}">
 
             <section data-route="home" class="flex">
-              <firebase-data-importer firebase-ref="https://rbdcdataviz.firebaseio.com/ipedsData/"></firebase-data-importer>
+              <firebase-data-importer base-ref="https://rbdcdataviz.firebaseio.com/ipedsData/"></firebase-data-importer>
               <paper-material elevation="1">
                 <!-- placeholder for a chart-tile component featuring the motion chart -->
                 <google-chart id="motionChartPlaceholder" type="bubble" options="{}"
