--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -29,6 +29,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <!-- Other Google elements -->
 <link rel="import" href="../bower_components/google-chart/google-chart.html">
+<link rel="import" href="../bower_components/firebase-element/firebase-auth.html">
+<link rel="import" href="../bower_components/firebase-element/firebase-collection.html">
+<link rel="import" href="../bower_components/firebase-element/firebase-document.html">
 
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 <!--
