working up an example chart that pulls real data in from Firebase.

--- a/app/index.html
+++ b/app/index.html
@@ -100,6 +100,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
             <section data-route="home" class="flex">
               <firebase-data-importer base-ref="https://rbdcdataviz.firebaseio.com/ipedsData/"></firebase-data-importer>
+              <chart-example base-ref="https://rbdcdataviz.firebaseio.com/ipedsData/"></chart-example>
               <paper-material elevation="1">
                 <!-- placeholder for a chart-tile component featuring the motion chart -->
                 <google-chart id="motionChartPlaceholder" type="bubble" options="{}"
