--- a/app/elements/chart-example/chart-example.html
+++ b/app/elements/chart-example/chart-example.html
@@ -99,6 +99,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       },
       buildChartData: function(e) {
         console.log(e)
+        console.log(this.items)
       },
       buildChart: function() {
         this.ref = this.buildRef(this.baseRef)
