Finished making a basic aggregation function that takes one property from each node in firebase and combines them into a single string for google charts to take. Pushing because of clientele's interest of an update in the code. Continuing to make a more advanced aggregator function to allow the rest of the charts to be fully implemented. Also added the scrollableList element, the tileComponent element, and the customDropdown element to the project, which will be essential as soon as the advanced aggregator is finished. Added more database seeds as well.

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -52,3 +52,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="my-list/my-list.html">
 <link rel="import" href="firebase-data-importer/firebase-data-importer.html">
 <link rel="import" href="chart-example/chart-example.html">
+<link rel="import" href="scrollable-list/scrollable-list.html">
+<link rel="import" href="tile-component/tile-component.html">
+<link rel="import" href="chart-specs/chart-specs.html">
+
