pushing to github for datavis meeting, worked on getting a bubble chart to show up. This requires me to create another aggregator that will foucus on retrieving the data from all three databases, and making it into a multidimensional array that the google chart element will be okay with

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -26,6 +26,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
 
 <!-- Other Google elements -->
 <link rel="import" href="../bower_components/google-chart/google-chart.html">
@@ -55,4 +56,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="scrollable-list/scrollable-list.html">
 <link rel="import" href="tile-component/tile-component.html">
 <link rel="import" href="chart-specs/chart-specs.html">
+<link rel="import" href="custom-dropdown/custom-dropdown.html">
+<link rel="import" href="element-aggregator/element-aggregator.html">
 
